--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,67 +1,76 @@
-# .github/workflows/deploy.yml
-name: Deploy to GitHub Pages
+name: Deploy Laravel to GitHub Pages
 
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
+  # Memungkinkan untuk menjalankan workflow secara manual dari tab Actions
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
-  build:
+  laravel-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
+    steps:
+      # Checkout kode repository
+      - uses: actions/checkout@v3
+
+      # Setup PHP dengan versi yang sesuai untuk Laravel 12
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.4.5"
+          extensions: mbstring, dom, fileinfo, mysql, gd, curl, zip, xml
+          tools: composer:v2
 
-      - name: Install Composer Dependencies
-        run: composer install --no-dev --no-interaction --prefer-dist
+      # Install dependensi Composer
+      - name: Install Dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest --optimize-autoloader
 
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
-      - name: Generate Application Key
-        run: php artisan key:generate
-
-      - name: Build Frontend (jika menggunakan Vite/Mix)
-        run: |
-          # Remove this comment and add your build commands if needed
-          # Example: npm install && npm run build
-          echo "Skipping frontend build"
-
-      - name: Prepare GitHub Pages
-        run: |
-          mkdir -p docs
-          cp -R public/* docs/
-          # Create necessary directories for Jekyll
-          mkdir -p docs/assets/css
-          # Create a basic Jekyll structure
-          echo '---' > docs/assets/css/style.scss
-          echo '---' >> docs/assets/css/style.scss
-          echo '@import "{{ site.theme }}";' >> docs/assets/css/style.scss
-          # Ensure .nojekyll is present
-          touch docs/.nojekyll
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      # Setup Node.js untuk kompilasi aset (jika menggunakan Vite/Laravel Mix)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          path: "./docs"
+          node-version: "18"
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+      # Install dependensi Node.js
+      - name: Install Node Dependencies
+        run: npm install
+
+      # Build aset frontend
+      - name: Build Assets
+        run: npm run build
+
+      # Generate application key
+      - name: Generate Application Key
+        run: php artisan key:generate --force
+
+      # Optimasi Laravel
+      - name: Optimize Laravel
+        run: |
+          php artisan optimize
+          php artisan config:cache
+          php artisan route:cache
+          php artisan view:cache
+
+      # Buat direktori build dan kopikan konten public ke dalamnya
+      - name: Prepare Build Directory
+        run: |
+          mkdir -p build
+          cp -R public/* build/
+          cp public/.htaccess build/ || true
+          # Buat file index.php yang mengarah ke folder public
+          echo '<?php include_once("index.html");' > build/index.php
+
+      # Buat file .nojekyll untuk menghindari pemrosesan Jekyll
+      - name: Create .nojekyll file
+        run: touch build/.nojekyll
+
+      # Deploy ke GitHub Pages
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
+          branch: gh-pages
+          clean: true
