--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,6 +29,26 @@ jobs:
       - name: Generate key
         run: php artisan key:generate
 
+      # php migrate
+      - name: Run migrations
+        run: php artisan migrate --force
+
+      # php db:seed
+      - name: Run database seeder
+        run: php artisan db:seed --force
+      # php storage:link
+      - name: Create storage link
+        run: php artisan storage:link
+      # php cache:clear
+      - name: Clear cache
+        run: php artisan optimize:clear
+      # php config:cache
+      - name: Cache config
+        run: php artisan config:cache
+      # php route:cache
+      - name: Cache routes
+        run: php artisan route:cache
+
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
 
@@ -41,7 +61,12 @@ jobs:
           vendor/bin/phpunit
 
       - name: Install NPM dependencies
-        run: npm ci
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
 
       - name: Build frontend
         run: npm run build
